--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       display: none;
       z-index: 50;
     }
-    .user-menu:hover .user-dropdown {
+    .user-dropdown.show {
       display: block;
     }
   </style>
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="user-menu">
-        <button class="flex items-center gap-2 bg-white border border-slate-200 rounded-lg px-3 py-2 hover:bg-slate-50 transition">
+        <button onclick="toggleUserMenu()" class="flex items-center gap-2 bg-white border border-slate-200 rounded-lg px-3 py-2 hover:bg-slate-50 transition">
           <img id="userAvatar" src="" alt="User" class="w-8 h-8 rounded-full">
           <div class="text-left hidden md:block">
             <div id="userName" class="text-sm font-medium text-slate-800"></div>
@@ -158,7 +158,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
           </svg>
         </button>
-        <div class="user-dropdown">
+        <div id="userDropdown" class="user-dropdown">
           <div class="p-3 border-b border-slate-100">
             <div class="text-sm font-medium text-slate-800" id="dropdownName"></div>
             <div class="text-xs text-slate-500" id="dropdownEmail"></div>
@@ -608,6 +608,21 @@
       document.getElementById('newUserEmail').value = '';
       openAccessControl(); // 重新載入列表
     }
+
+    // 切換使用者選單
+    function toggleUserMenu() {
+      const dropdown = document.getElementById('userDropdown');
+      dropdown.classList.toggle('show');
+    }
+
+    // 點擊外部關閉選單
+    document.addEventListener('click', function(event) {
+      const userMenu = document.querySelector('.user-menu');
+      const dropdown = document.getElementById('userDropdown');
+      if (dropdown && userMenu && !userMenu.contains(event.target)) {
+        dropdown.classList.remove('show');
+      }
+    });
 
     function updateStatus(status) {
       const badge = document.getElementById('statusBadge');
