--- a/index.html
+++ b/index.html
@@ -436,75 +436,79 @@
     </div>
   </dialog>
 
-  <dialog id="editModal" class="rounded-xl shadow-2xl p-0 w-full max-w-md overflow-hidden">
-    <div class="bg-white p-6">
-      <h3 class="text-xl font-bold text-slate-800 mb-4 flex items-center gap-2">
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
-        編輯合約內容
-      </h3>
-      <input type="hidden" id="editId">
-      <div class="grid grid-cols-2 gap-4">
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">借款人</label>
-          <input type="text" id="editBorrower" class="w-full border rounded p-2">
-        </div>
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">原始金額</label>
-          <input type="number" id="editAmount" step="1000" class="w-full border rounded p-2">
-        </div>
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">借款日期</label>
-          <input type="date" id="editLoanDate" class="w-full border rounded p-2">
-        </div>
-        <div>
-          <label class="text-xs text-slate-500">利率 (%)</label>
-          <input type="number" id="editRate" class="w-full border rounded p-2">
-        </div>
-        <div>
-          <label class="text-xs text-slate-500">週期</label>
-          <select id="editRateType" onchange="togglePayDayInput('edit')" class="w-full border rounded p-2 bg-white">
-            <option value="月">月息</option>
-            <option value="週">週息</option>
-          </select>
-        </div>
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">繳息機制</label>
-          <select id="editRoundingType" class="w-full border rounded p-2 bg-white">
-            <option value="normal">正常制</option>
-            <option value="round">取整數制 (百位)</option>
-          </select>
-        </div>
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">約定繳息時間</label>
-          <div id="monthlyInput_edit">
-            <input type="number" id="editPayDayDate" placeholder="每月幾號 (1-31)" min="1" max="31" class="w-full border rounded p-2">
-          </div>
-          <select id="editPayDayWeek" class="hidden w-full border rounded p-2 bg-white">
-            <option value="1">每週一</option>
-            <option value="2">每週二</option>
-            <option value="3">每週三</option>
-            <option value="4">每週四</option>
-            <option value="5">每週五</option>
-            <option value="6">每週六</option>
-            <option value="0">每週日</option>
-          </select>
-        </div>
-        <div>
-          <label class="text-xs text-slate-500">手續費 (開辦費)</label>
-          <input type="number" id="editServiceFee" class="w-full border rounded p-2 outline-none">
-        </div>
-        <div>
-          <label class="text-xs text-slate-500">金主分潤比例 (%)</label>
-          <input type="number" id="editInvestorSplit" class="w-full border rounded p-2 outline-none">
-        </div>
-        <div class="col-span-2">
-          <label class="text-xs text-slate-500">備註</label>
-          <input type="text" id="editNotes" placeholder="備註資訊（選填）" class="w-full border rounded p-2">
-        </div>
+  <dialog id="editModal" class="rounded-xl shadow-2xl p-0 w-full max-w-md">
+    <div class="bg-white max-h-[85vh] overflow-y-auto">
+      <div class="sticky top-0 bg-white p-6 pb-4 border-b border-slate-100 z-10">
+        <h3 class="text-xl font-bold text-slate-800 flex items-center gap-2">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
+          編輯合約內容
+        </h3>
       </div>
-      <div class="mt-6 flex gap-3">
-        <button onclick="document.getElementById('editModal').close()" class="flex-1 py-2 text-gray-500 hover:bg-gray-100 rounded-lg">取消</button>
-        <button onclick="saveEdit()" class="flex-1 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-bold shadow-md">儲存修改</button>
+      <input type="hidden" id="editId">
+      <div class="p-6 pt-4">
+        <div class="grid grid-cols-2 gap-4">
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">借款人</label>
+            <input type="text" id="editBorrower" class="w-full border rounded p-2">
+          </div>
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">原始金額</label>
+            <input type="number" id="editAmount" step="1000" class="w-full border rounded p-2">
+          </div>
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">借款日期</label>
+            <input type="date" id="editLoanDate" class="w-full border rounded p-2">
+          </div>
+          <div>
+            <label class="text-xs text-slate-500">利率 (%)</label>
+            <input type="number" id="editRate" class="w-full border rounded p-2">
+          </div>
+          <div>
+            <label class="text-xs text-slate-500">週期</label>
+            <select id="editRateType" onchange="togglePayDayInput('edit')" class="w-full border rounded p-2 bg-white">
+              <option value="月">月息</option>
+              <option value="週">週息</option>
+            </select>
+          </div>
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">繳息機制</label>
+            <select id="editRoundingType" class="w-full border rounded p-2 bg-white">
+              <option value="normal">正常制</option>
+              <option value="round">取整數制 (百位)</option>
+            </select>
+          </div>
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">約定繳息時間</label>
+            <div id="monthlyInput_edit">
+              <input type="number" id="editPayDayDate" placeholder="每月幾號 (1-31)" min="1" max="31" class="w-full border rounded p-2">
+            </div>
+            <select id="editPayDayWeek" class="hidden w-full border rounded p-2 bg-white">
+              <option value="1">每週一</option>
+              <option value="2">每週二</option>
+              <option value="3">每週三</option>
+              <option value="4">每週四</option>
+              <option value="5">每週五</option>
+              <option value="6">每週六</option>
+              <option value="0">每週日</option>
+            </select>
+          </div>
+          <div>
+            <label class="text-xs text-slate-500">手續費 (開辦費)</label>
+            <input type="number" id="editServiceFee" class="w-full border rounded p-2 outline-none">
+          </div>
+          <div>
+            <label class="text-xs text-slate-500">金主分潤比例 (%)</label>
+            <input type="number" id="editInvestorSplit" class="w-full border rounded p-2 outline-none">
+          </div>
+          <div class="col-span-2">
+            <label class="text-xs text-slate-500">備註</label>
+            <input type="text" id="editNotes" placeholder="備註資訊（選填）" class="w-full border rounded p-2">
+          </div>
+        </div>
+        <div class="mt-6 flex gap-3 sticky bottom-0 bg-white pt-4 border-t border-slate-100">
+          <button onclick="document.getElementById('editModal').close()" class="flex-1 py-2 text-gray-500 hover:bg-gray-100 rounded-lg">取消</button>
+          <button onclick="saveEdit()" class="flex-1 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-bold shadow-md">儲存修改</button>
+        </div>
       </div>
     </div>
   </dialog>
