--- a/index.html
+++ b/index.html
@@ -1199,8 +1199,8 @@ const newLoan = {
                     <div class="bg-amber-50 p-3 rounded border border-amber-100 flex flex-col justify-between">
                       <div>
                         <div class="text-xs text-amber-600 font-bold mb-2 flex justify-between">
-                          <span>損益結算 (50/50 拆)</span>
-                          <span>甲方比例 ${loan.investorSplit}%</span>
+                          <span>損益結算 (${mySplitRatio}/${100 - mySplitRatio} 拆)</span>
+                          <span>甲方比例 ${mySplitRatio}%</span>
                         </div>
                         <div class="text-sm font-bold text-slate-700 flex justify-between py-0.5">
                           <span>甲方(金主)應得:</span>
@@ -1215,11 +1215,12 @@ const newLoan = {
                       <div class="mt-2 pt-2 border-t border-amber-200">
                         <div class="text-[10px] font-bold ${bOverdrawn > 0 ? 'text-red-500' : 'text-emerald-600'} flex justify-between">
                             <span>${bOverdrawn > 0 ? `⚠️ 乙方超領預支` : '✅ 帳目分配平衡'}</span>
-                            <span>${bOverdrawn > 0 ? `$${Math.round(bOverdrawn).toLocaleString()}` : ''}</span>
+                            <span>${bOverdrawn > 0 ? '$' + Math.round(Math.abs(bOverdrawn)).toLocaleString() : ''}</span>
                         </div>
+                        
                         <div class="bg-white/60 p-2 rounded mt-1.5 border border-amber-100 shadow-sm">
                             <div class="text-[9px] text-slate-500 mb-1 font-bold">下次利息現金分配建議：</div>
-                            <div class="flex justify-between text-[11px] font-bold">
+                            <div class="flex justify-between text-[10px] font-bold">
                                 <span class="text-indigo-600">甲方實領：$${Math.round(suggestA).toLocaleString()}</span>
                                 <span class="text-slate-600">乙方實領：$${Math.round(suggestB).toLocaleString()}</span>
                             </div>
