--- a/index.html
+++ b/index.html
@@ -1190,16 +1190,16 @@ const newLoan = {
             suggestB = singleInterest - suggestA;
         }
 
-        // --- 3. 動態視覺效果 (修正重複宣告錯誤) ---
-        let pColor = 'bg-red-500'; 
-        if (borrowerProgress >= 100) pColor = 'bg-emerald-500';
-        else if (borrowerProgress >= 50) pColor = 'bg-amber-500';
+        // --- 3. 動態視覺效果 ---
+        let pBarColor = 'bg-red-500'; 
+        if (borrowerProgress >= 100) pBarColor = 'bg-emerald-500';
+        else if (borrowerProgress >= 50) pBarColor = 'bg-amber-500';
 
         const isPaidOff = remaining <= 0;
         const isDue = checkIsDueToday(loan);
         
         const html = `
-          <div class="bg-white rounded-xl shadow-sm border border-slate-200 overflow-hidden relative group hover:shadow-md transition">
+          <div class="bg-white rounded-xl shadow-sm border border-slate-200 overflow-hidden relative group hover:shadow-md transition mb-6">
             <div class="flex justify-between items-start bg-slate-50 border-b border-slate-100 p-4">
               <div>
                 <h3 class="text-xl font-bold text-slate-800 flex items-center gap-2">
@@ -1207,7 +1207,6 @@ const newLoan = {
                   ${isPaidOff ? '<span class="bg-emerald-100 text-emerald-700 text-xs px-2 py-0.5 rounded-full">已結清</span>' : ''}
                 </h3>
                 <div class="text-xs text-slate-400 mt-1">借款日: ${loan.loanDate}</div>
-                ${loan.notes ? `<div class="text-xs text-slate-500 mt-1">📝 ${loan.notes}</div>` : ''}
               </div>
               <div class="text-right flex flex-col items-end gap-1">
                 <div class="flex gap-1">
@@ -1236,7 +1235,7 @@ const newLoan = {
                       <span class="font-bold text-slate-700">${borrowerProgress}%</span>
                     </div>
                     <div class="w-full bg-slate-200 rounded-full h-2.5">
-                      <div class="${pColor} h-2.5 rounded-full transition-all duration-700" style="width: ${borrowerProgress}%"></div>
+                      <div class="${pBarColor} h-2.5 rounded-full transition-all duration-700" style="width: ${borrowerProgress}%"></div>
                     </div>
                   </div>
                 </div>
@@ -1262,7 +1261,7 @@ const newLoan = {
                         <span>$${Math.round(Math.abs(bOverdrawn)).toLocaleString()}</span>
                     </div>
                     <div class="bg-white/60 p-2 rounded mt-1.5 border border-amber-100 shadow-sm">
-                        <div class="text-[9px] text-slate-500 mb-1 font-bold">下次利息現金分配建議：</div>
+                        <div class="text-[9px] text-slate-500 mb-1 font-bold">下次利息分配建議：</div>
                         <div class="flex justify-between text-[10px] font-bold">
                             <span class="text-indigo-600">甲方實領：$${Math.round(suggestA).toLocaleString()}</span>
                             <span class="text-slate-600">乙方實領：$${Math.round(suggestB).toLocaleString()}</span>
@@ -1272,10 +1271,36 @@ const newLoan = {
                 </div>
               </div>
 
-              <div class="flex gap-2">
+              <div class="flex gap-2 mb-3">
                 ${!isPaidOff ? `<button onclick="openModal('principal', ${loan.id})" class="flex-1 bg-emerald-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-emerald-700 shadow-sm transition">還本金</button>` : ''}
                 <button onclick="openModal('interest', ${loan.id})" class="flex-1 bg-amber-500 text-white py-2 rounded-lg text-sm font-medium hover:bg-amber-600 shadow-sm transition">收利息</button>
               </div>
+
+              <details class="group/detail mt-3">
+                <summary class="flex justify-center items-center cursor-pointer text-sm text-slate-400 hover:text-indigo-500 py-1 select-none transition-colors">
+                  <span>查看詳細交易明細</span>
+                </summary>
+                <div class="mt-2 grid grid-cols-2 gap-3 text-sm bg-slate-50 p-3 rounded-lg border border-slate-100 max-h-48 overflow-y-auto">
+                  <div>
+                    <div class="font-bold text-slate-600 mb-2 sticky top-0 bg-slate-50 border-b border-slate-200 text-xs pb-1">還本紀錄</div>
+                    ${repayments.length ? repayments.map(r => `
+                      <div class="flex justify-between text-slate-500 border-b border-slate-100 py-1 text-[11px]">
+                        <span>${r.date}</span>
+                        <span class="font-medium">-${r.amount.toLocaleString()}</span>
+                      </div>
+                    `).join('') : '<div class="text-slate-300 text-[10px] italic py-1">暫無紀錄</div>'}
+                  </div>
+                  <div>
+                    <div class="font-bold text-slate-600 mb-2 sticky top-0 bg-slate-50 border-b border-slate-200 text-xs pb-1">獲利紀錄</div>
+                    ${interestPayments.length ? interestPayments.map(r => `
+                      <div class="flex justify-between text-amber-600 border-b border-slate-100 py-1 text-[11px]">
+                        <span>${r.date}</span>
+                        <span class="font-medium">+${r.amount.toLocaleString()}</span>
+                      </div>
+                    `).join('') : '<div class="text-slate-300 text-[10px] italic py-1">暫無紀錄</div>'}
+                  </div>
+                </div>
+              </details>
             </div>
           </div>
         `;
