Add edit and delete buttons for loan owner

--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,10 @@ const newLoan = {
               </div>
               <div class="text-right flex flex-col items-end gap-1">
                 <div class="flex gap-1">
-                  <button onclick="openEditModal(${loan.id})" class="p-1.5 text-slate-400 hover:text-indigo-600 rounded"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path></svg></button>
-                  <button onclick="deleteLoan(${loan.id})" class="p-1.5 text-slate-400 hover:text-red-500 rounded"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg></button>
+                  ${isOwner ? `
+                    <button onclick="openEditModal(${loan.id})" ...>編輯</button>
+                    <button onclick="deleteLoan(${loan.id})" ...>刪除</button>
+                  ` : ''}
                 </div>
                 <span class="text-lg font-bold text-slate-600">$${loan.originalAmount.toLocaleString()}</span>
               </div>
@@ -1272,8 +1274,10 @@ const newLoan = {
               </div>
 
               <div class="flex gap-2 mb-3">
-                ${!isPaidOff ? `<button onclick="openModal('principal', ${loan.id})" class="flex-1 bg-emerald-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-emerald-700 shadow-sm transition">還本金</button>` : ''}
-                <button onclick="openModal('interest', ${loan.id})" class="flex-1 bg-amber-500 text-white py-2 rounded-lg text-sm font-medium hover:bg-amber-600 shadow-sm transition">收利息</button>
+                ${isOwner ? `
+                  ${!isPaidOff ? `<button onclick="openModal('principal', ${loan.id})" ...>還本金</button>` : ''}
+                  <button onclick="openModal('interest', ${loan.id})" ...>收利息</button>
+                ` : '<div class="text-center w-full py-2 text-slate-400 text-xs italic">乙方帳號僅具備檢視權限</div>'}
               </div>
 
               <details class="group/detail mt-3">
