--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@ const newLoan = {
       container.innerHTML = '';
       
       // ==========================================
-      // 💡 [第一階段] 計算全域數據統計 (頂部看板)
+      // 💡 [第一階段] 全域數據統計 (頂部看板)
       // ==========================================
       let globalRemaining = 0;   // 📋 外面流通本金
       let globalRiskAmount = 0;  // 🛡️ 甲方未回收成本
@@ -1190,10 +1190,10 @@ const newLoan = {
             suggestB = singleInterest - suggestA;
         }
 
-        // --- 3. 動態視覺效果 ---
-        let pBarColor = 'bg-red-500'; 
-        if (borrowerProgress >= 100) pBarColor = 'bg-emerald-500';
-        else if (borrowerProgress >= 50) pBarColor = 'bg-amber-500';
+        // --- 3. 動態視覺效果 (只在此處宣告一次 pColor) ---
+        let pColor = 'bg-red-500'; 
+        if (borrowerProgress >= 100) pColor = 'bg-emerald-500';
+        else if (borrowerProgress >= 50) pColor = 'bg-amber-500';
 
         const isPaidOff = remaining <= 0;
         const isDue = checkIsDueToday(loan);
@@ -1207,12 +1207,13 @@ const newLoan = {
                   ${isPaidOff ? '<span class="bg-emerald-100 text-emerald-700 text-xs px-2 py-0.5 rounded-full">已結清</span>' : ''}
                 </h3>
                 <div class="text-xs text-slate-400 mt-1">借款日: ${loan.loanDate}</div>
+                ${loan.notes ? `<div class="text-xs text-slate-500 mt-1">📝 ${loan.notes}</div>` : ''}
               </div>
               <div class="text-right flex flex-col items-end gap-1">
                 <div class="flex gap-1">
                   ${isOwner ? `
-                    <button onclick="openEditModal(${loan.id})" ...>編輯</button>
-                    <button onclick="deleteLoan(${loan.id})" ...>刪除</button>
+                    <button onclick="openEditModal(${loan.id})" class="p-1.5 text-slate-400 hover:text-indigo-600 rounded"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path></svg></button>
+                    <button onclick="deleteLoan(${loan.id})" class="p-1.5 text-slate-400 hover:text-red-500 rounded"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg></button>
                   ` : ''}
                 </div>
                 <span class="text-lg font-bold text-slate-600">$${loan.originalAmount.toLocaleString()}</span>
@@ -1237,7 +1238,7 @@ const newLoan = {
                       <span class="font-bold text-slate-700">${borrowerProgress}%</span>
                     </div>
                     <div class="w-full bg-slate-200 rounded-full h-2.5">
-                      <div class="${pBarColor} h-2.5 rounded-full transition-all duration-700" style="width: ${borrowerProgress}%"></div>
+                      <div class="${pColor} h-2.5 rounded-full transition-all duration-700" style="width: ${borrowerProgress}%"></div>
                     </div>
                   </div>
                 </div>
@@ -1273,15 +1274,15 @@ const newLoan = {
                 </div>
               </div>
 
-              <div class="flex gap-2 mb-3">
+              <div class="flex gap-2">
                 ${isOwner ? `
-                  ${!isPaidOff ? `<button onclick="openModal('principal', ${loan.id})" ...>還本金</button>` : ''}
-                  <button onclick="openModal('interest', ${loan.id})" ...>收利息</button>
+                  ${!isPaidOff ? `<button onclick="openModal('principal', ${loan.id})" class="flex-1 bg-emerald-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-emerald-700 shadow-sm transition">還本金</button>` : ''}
+                  <button onclick="openModal('interest', ${loan.id})" class="flex-1 bg-amber-500 text-white py-2 rounded-lg text-sm font-medium hover:bg-amber-600 shadow-sm transition">收利息</button>
                 ` : '<div class="text-center w-full py-2 text-slate-400 text-xs italic">乙方帳號僅具備檢視權限</div>'}
               </div>
 
               <details class="group/detail mt-3">
-                <summary class="flex justify-center items-center cursor-pointer text-sm text-slate-400 hover:text-indigo-500 py-1 select-none transition-colors">
+                <summary class="flex justify-center items-center cursor-pointer text-sm text-slate-400 hover:text-indigo-500 py-1 select-none">
                   <span>查看詳細交易明細</span>
                 </summary>
                 <div class="mt-2 grid grid-cols-2 gap-3 text-sm bg-slate-50 p-3 rounded-lg border border-slate-100 max-h-48 overflow-y-auto">
@@ -1289,19 +1290,17 @@ const newLoan = {
                     <div class="font-bold text-slate-600 mb-2 sticky top-0 bg-slate-50 border-b border-slate-200 text-xs pb-1">還本紀錄</div>
                     ${repayments.length ? repayments.map(r => `
                       <div class="flex justify-between text-slate-500 border-b border-slate-100 py-1 text-[11px]">
-                        <span>${r.date}</span>
-                        <span class="font-medium">-${r.amount.toLocaleString()}</span>
+                        <span>${r.date}</span><span class="font-medium">-${r.amount.toLocaleString()}</span>
                       </div>
-                    `).join('') : '<div class="text-slate-300 text-[10px] italic py-1">暫無紀錄</div>'}
+                    `).join('') : '<div class="text-slate-300 text-[10px] py-1">暫無紀錄</div>'}
                   </div>
                   <div>
                     <div class="font-bold text-slate-600 mb-2 sticky top-0 bg-slate-50 border-b border-slate-200 text-xs pb-1">獲利紀錄</div>
                     ${interestPayments.length ? interestPayments.map(r => `
                       <div class="flex justify-between text-amber-600 border-b border-slate-100 py-1 text-[11px]">
-                        <span>${r.date}</span>
-                        <span class="font-medium">+${r.amount.toLocaleString()}</span>
+                        <span>${r.date}</span><span class="font-medium">+${r.amount.toLocaleString()}</span>
                       </div>
-                    `).join('') : '<div class="text-slate-300 text-[10px] italic py-1">暫無紀錄</div>'}
+                    `).join('') : '<div class="text-slate-300 text-[10px] py-1">暫無紀錄</div>'}
                   </div>
                 </div>
               </details>
