--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           </div>
           <div>
             <label class="block text-xs font-medium text-slate-500 mb-1">備註</label>
-            <input type="text" id="notes" placeholder="備註資訊（選填）" class="w-full border rounded-lg p-2.5 outline-none focus:ring-2 focus:ring-indigo-500">
+            <input type="text" id="notes" placeholder="ex:本票編號：XXXXXX" class="w-full border rounded-lg p-2.5 outline-none focus:ring-2 focus:ring-indigo-500">
           </div>
 
           <div class="lg:col-span-3 bg-slate-50 p-4 rounded-xl border border-dashed border-slate-300">
