--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
       </div>
     </div>
-    <div id="statsDashboard" class="grid grid-cols-2 md:grid-cols-3 gap-3 mb-6">
+    <div id="statsDashboard" class="grid grid-cols-3 gap-2 mb-6">
       </div>
     <details class="bg-white rounded-2xl shadow-sm border border-slate-200 mb-6 group" open>
       <summary class="p-4 cursor-pointer list-none flex justify-between items-center font-bold text-slate-600 hover:text-indigo-600">
@@ -1152,20 +1152,21 @@
           globalProfit += (interestProfit * splitRatio) + myFeeShare;
       });
 
+      // 更新看板 UI (優化手機一排顯示)
       const statsEl = document.getElementById('statsDashboard');
       if (statsEl) {
         statsEl.innerHTML = `
-          <div class="bg-white p-4 rounded-xl border border-slate-200 shadow-sm flex flex-col justify-center">
-            <div class="text-sm text-slate-500 font-bold mb-2">📋 外面流通本金</div>
-            <div class="text-xl font-black text-slate-800">$${Math.round(globalRemaining).toLocaleString()}</div>
+          <div class="bg-white p-2 md:p-4 rounded-xl border border-slate-200 shadow-sm flex flex-col justify-center text-center">
+            <div class="text-[10px] md:text-sm text-slate-500 font-bold mb-1">📋 流通本金</div>
+            <div class="text-sm md:text-xl font-black text-slate-800 whitespace-nowrap">$${Math.round(globalRemaining).toLocaleString()}</div>
           </div>
-          <div class="bg-indigo-50 p-4 rounded-xl border border-indigo-100 shadow-sm flex flex-col justify-center">
-            <div class="text-sm text-indigo-600 font-bold mb-2">🛡️ 甲方未回收成本</div>
-            <div class="text-xl font-black text-indigo-700">$${Math.round(globalRiskAmount).toLocaleString()}</div>
+          <div class="bg-indigo-50 p-2 md:p-4 rounded-xl border border-indigo-100 shadow-sm flex flex-col justify-center text-center">
+            <div class="text-[10px] md:text-sm text-indigo-600 font-bold mb-1">🛡️ 未回成本</div>
+            <div class="text-sm md:text-xl font-black text-indigo-700 whitespace-nowrap">$${Math.round(globalRiskAmount).toLocaleString()}</div>
           </div>
-          <div class="bg-amber-50 p-4 rounded-xl border border-amber-100 shadow-sm flex flex-col justify-center">
-            <div class="text-sm text-amber-600 font-bold mb-2">💰 甲方累計收益</div>
-            <div class="text-xl font-black text-amber-600">$${Math.round(globalProfit).toLocaleString()}</div>
+          <div class="bg-amber-50 p-2 md:p-4 rounded-xl border border-amber-100 shadow-sm flex flex-col justify-center text-center">
+            <div class="text-[10px] md:text-sm text-amber-600 font-bold mb-1">💰 累計收益</div>
+            <div class="text-sm md:text-xl font-black text-amber-600 whitespace-nowrap">$${Math.round(globalProfit).toLocaleString()}</div>
           </div>
         `;
       }
