篩選器預設更改

--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
       <div class="h-6 w-px bg-slate-300"></div>
       <span class="text-sm font-bold text-slate-500">篩選：</span>
       <select id="filterStatus" onchange="renderLoans()" class="bg-white border border-slate-300 text-sm rounded-lg p-2 outline-none">
+        <option value="active" selected>🔄 進行中</option>
         <option value="all">📋 全部顯示</option>
-        <option value="active">🔄 進行中</option>
         <option value="completed">✅ 已結清</option>
       </select>
       <div class="h-6 w-px bg-slate-300"></div>
